@@ -198,12 +198,12 @@ Utilities
 Here is list in alphabetical order of utilities found in the 'src'
 subdirectory of the sg3_utils package:
   - sginfo, sgm_dd, sgp_dd, sg_dd, sg_emc_trespass, sg_get_config,
-    sg_format, sg_ident, sg_inq, sg_logs, sg_luns, sg_map, sg_map26,
-    sg_modes, sg_opcodes, sg_persist, sg_prevent, sg_raw, sg_rbuf, sg_rdac,
-    sg_read, sg_readcap, sg_read_block_limits, sg_read_buffer, sg_read_long,
-    sg_reassign, sg_request, sg_reset, sg_rmsn, sg_rtpg, sg_safte,
-    sg_sat_identify, sg_sat_phy_event, sg_sat_set_features, sg_scan,
-    sg_senddiag, sg_ses, sg_start, sg_stpg, sg_sync, sg_test_rwbuff,
+    sg_get_lba_status, sg_format, sg_ident, sg_inq, sg_logs, sg_luns, sg_map,
+    sg_map26, sg_modes, sg_opcodes, sg_persist, sg_prevent, sg_raw, sg_rbuf,
+    sg_rdac, sg_read, sg_readcap, sg_read_block_limits, sg_read_buffer,
+    sg_read_long, sg_reassign, sg_request, sg_reset, sg_rmsn, sg_rtpg,
+    sg_safte, sg_sat_identify, sg_sat_phy_event, sg_sat_set_features,
+    sg_scan, sg_senddiag, sg_ses, sg_start, sg_stpg, sg_sync, sg_test_rwbuff,
     sg_turs, sg_unmap, sg_verify, sg_vpd, sg_write_buffer, sg_write_long,
     sg_write_same, sg_wr_mode
 
@@ -334,12 +334,12 @@ interface by defining the SG3_UTILS_OLD_OPTS environment variable
 or using '-O' as the first command line option.
 
 The more recent utilities that use "getopt_long" only are:
-  - sg_format sg_get_config sg_ident sg_luns sg_map26 sg_persist
-    sg_prevent sg_raw sg_read_block_limits sg_read_buffer sg_read_long
-    sg_reassign sg_requests sg_rmsn sg_rtpg sg_safte sg_sat_identify
-    sg_sat_phy_event sg_sat_set_features sg_scan(w) sg_ses sg_stpg sg_sync
-    sg_test_rwbuf sg_unmap sg_verify sg_vpd sg_write_buffer sg_write_long
-    sg_write_same sg_wr_mode
+  - sg_format sg_get_config sg_get_lba_status sg_ident sg_luns sg_map26
+    sg_persist sg_prevent sg_raw sg_read_block_limits sg_read_buffer
+    sg_read_long sg_reassign sg_requests sg_rmsn sg_rtpg sg_safte
+    sg_sat_identify sg_sat_phy_event sg_sat_set_features sg_scan(w) sg_ses
+    sg_stpg sg_sync sg_test_rwbuf sg_unmap sg_verify sg_vpd sg_write_buffer
+    sg_write_long sg_write_same sg_wr_mode
 
 
 Dangerous code
@@ -361,4 +361,4 @@ See http://sg.danny.cz/sg/tools.html
 
 
 Doug Gilbert
-6th September 2009
+20th September 2009
