@@ -10,6 +10,7 @@ Supported Utilities
 Here is a list of utilities that have been ported:
     sg_format
     sg_get_config
+    sg_get_lba_status
     sg_ident
     sg_inq          [dropped ATA IDENTIFY DEVICE capability]
     sg_logs
@@ -87,4 +88,4 @@ subdirectory. Currently only the Tru64 port uses it.
 
 
 Doug Gilbert
-15th June 2009
+20th September 2009
