@@ -25,6 +25,7 @@ Supported Utilities
 Here is a list of utilities that have been ported:
     sg_format
     sg_get_config
+    sg_get_lba_status
     sg_ident
     sg_inq          [dropped ATA IDENTIFY DEVICE capability]
     sg_logs
@@ -191,4 +192,4 @@ mode" with the setmode() Windows command.
 
 
 Doug Gilbert
-18th August 2009
+20th September 2009
