@@ -49,7 +49,7 @@
 #endif
 
 
-static char * version_str = "1.48 20090918";
+static char * version_str = "1.48 20090920";
 
 
 #define SENSE_BUFF_LEN 32       /* Arbitrary, could be larger */
@@ -195,7 +195,6 @@ sg_cmds_process_resp(struct sg_pt_base * ptvp, const char * leadin, int res,
             break;
         }
         if (verbose || n) {
-fprintf(stderr, "sg_cmds_process_resp: slen=%d\n", slen);
             sg_get_sense_str(leadin, sense_b, slen, (verbose > 1),
                              sizeof(b), b);
             fprintf(sg_warnings_strm, "%s", b);
