@@ -2,7 +2,7 @@ sg3-utils (1.28-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sun, 06 Sep 2009 12:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Sun, 20 Sep 2009 12:40:00 +0200
 
 sg3-utils (1.27-0.1) unstable; urgency=low
 
