@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.28 [20090920] [svn: r301]
+Changelog for sg3_utils-1.28 [20090920] [svn: r305]
   - sg_unmap: new utility for thin provisioning
     - add examples/sg_unmap_example.txt
   - sg_get_lba_status: new utility for thin provisioning
@@ -30,6 +30,8 @@ Changelog for sg3_utils-1.28 [20090920] [svn: r301]
   - sg_cmds_extra: add sg_ll_unmap() and sg_ll_get_lba_status()
   - sg_pt_linux: fix check condition but empty sense buffer; occurred
     when sg v3 node used and /usr/include/linux/bsg.h visible
+    - major() macro grief, if present include <linux/kdev_t.h> and
+      use MAJOR() instead
   - scripts/sas_disk_blink: moved from this package to sdparm
   - utils/hxascdmp: in Windows set binary mode on read files
   - examples/sg_persist_tst.sh: add PRIN read full status command
